--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Anne-Céline Granjon, PhD"
 title_separator          : "-"
-subtitle                 : "This is my personal website" # site tagline that appears below site title in masthead
+subtitle                 : "This website is currently under construction" # site tagline that appears below site title in masthead
 name                     : "Anne-Céline Granjon"
 description              : "An amazing website."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
