added banner image

--- a/_config.yml
+++ b/_config.yml
@@ -329,3 +329,6 @@ defaults:
     values:
       layout: single
       author_profile: true
+      header:
+        image: /assets/images/Ambia-Dibouti2018.jpg
+        image_description: "Ambia and Dibouti (copyright Martha Robbins)"
