--- a/_config.yml
+++ b/_config.yml
@@ -330,5 +330,5 @@ defaults:
       layout: single
       author_profile: true
       header:
-        image: /assets/images/Ambia-Dibouti2018.png
+        image: /assets/images/Ambia-Dibouti2018.jpg
         image_description: "Ambia and Dibouti (copyright Martha Robbins)"
